--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "Banner1": "",
   "Banner1Image": "",
   "Banner2": "",
-  "BlogURL": "",
+  "BlogURL": "http://ocreilly.meiji-ncc.tech/",
   "CircleName": "O'Creilly",
   "CircleURL": "",
   "CopyrightYears": "2015",
