--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
   "Favicon": "",
   "FooterText": "C89 3日目 東ム51b でおまちしております",
   "GoogleAnalyticsID": "",
+  "Hashtag": "C89",
   "Introduction": "本書『詳説 お蔵入り』は，\nブログなどに書きそびれて\n世に出せなかったノウハウを集めた書籍です．",
   "IntroductionHeading": "詳説 お蔵入り",
   "JacketImage": "./imgs/circlecut.png",
