--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
   "GoogleAnalyticsID": "",
   "Hashtag": "C89",
   "Introduction": "本書『詳説 お蔵入り』は，\nブログなどに書きそびれて\n世に出せなかったノウハウを集めた書籍です．",
-  "IntroductionHeading": "詳説 お蔵入り",
+  "IntroductionHeading": "詳説 お蔵入り 第1版",
   "JacketImage": "./imgs/circlecut.png",
   "MainImage": "http://ocreilly.meiji-ncc.tech/imgs/header.png",
   "MetaDescription": "C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します",
