--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
   "GoogleAnalyticsID": "",
   "Hashtag": "C89",
   "Introduction": "本書『詳説 お蔵入り』は，\nブログなどに書きそびれて\n世に出せなかったノウハウを集めた書籍です．",
-  "IntroductionHeading": "詳説 お蔵入り 第1版",
+  "IntroductionHeading": "詳説 お蔵入り",
   "JacketImage": "./imgs/circlecut.png",
   "MainImage": "http://ocreilly.meiji-ncc.tech/imgs/header.png",
   "MetaDescription": "C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します",
@@ -63,7 +63,7 @@
   "Store03URL": "",
   "Store04Name": "",
   "Store04URL": "",
-  "Title": "詳説 お蔵入り",
+  "Title": "詳説 お蔵入り 第1版",
   "Section01Author": "@kwzr",
   "Section01Description": "TwinkrunはスマートフォンとBluetooth Low Energyを使ったスポーツゲームです．Twinkrunを例として，スポーツゲームを作りたい人向けに実装の方針やiOSとAndroidで通信する際の注意点などを詳解していきます．最近App Storeにお布施を払えなくてお蔵入りになりました．",
   "Section01Title": "詳解 Twinkrun",
