Rename book image

--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
   "Hashtag": "C89",
   "Introduction": "本書『詳説 お蔵入り』は，\nブログなどに書きそびれて\n世に出せなかったノウハウを集めた書籍です．",
   "IntroductionHeading": "詳説 お蔵入り",
-  "JacketImage": "./imgs/circlecut.png",
+  "JacketImage": "./imgs/book.png",
   "MainImage": "http://ocreilly.meiji-ncc.tech/imgs/header.png",
   "MetaDescription": "C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します",
   "NicovideoEmbedCode": "",
