--- a/config.json
+++ b/config.json
@@ -34,10 +34,10 @@
   "Staff03Name": "@kkrnt",
   "Staff03Role": "友利奈緒な森野きりん",
   "Staff03URL": "https://twitter.com/kkrnt",
-  "Staff04Name": "And more...",
-  "Staff04Role": "",
-  "Staff04URL": "",
-  "Staff05Name": "",
+  "Staff04Name": "@FMS_Cat",
+  "Staff04Role": "フルスタックな猫",
+  "Staff04URL": "https://twitter.com/FMS_Cat",
+  "Staff05Name": "And more...",
   "Staff05Role": "",
   "Staff05URL": "",
   "Staff06Name": "",
