--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "handlebars": "^4.0.5"
   },
   "scripts": {
+    "build": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
