--- a/config.json
+++ b/config.json
@@ -73,10 +73,11 @@
   "Section03Author": "@3846masa",
   "Section03Description": "Google Photosの内部APIについて書きます．公式でAPIが提供されていないGoogle Photosですが，Webインタフェースでは内部APIが使われています．これを活用すれば，Google Photosをより使い倒すことができるでしょう．",
   "Section03Title": "Google Photos Hacks",
-  "Section04Description": "",
-  "Section04Title": "And more...",
+  "Section04Author": "@FMS_Cat",
+  "Section04Description": "オシロスコープのX-Yモードを利用した，絵を描き方を解説します．単純な円やリサジュー曲線をはじめとして，文字や3DCGの描画についても解説をします．また，様々なグラフィックを描画するだけでなく，聴覚的な変化の付け方についても解説をします．",
+  "Section04Title": "入門 オシロスコープ X-Yモード",
   "Section05Description": "",
-  "Section05Title": "",
+  "Section05Title": "And more...",
   "Section06Description": "",
   "Section06Title": "",
   "Section07Description": "",
