--- a/config.json
+++ b/config.json
@@ -68,8 +68,8 @@
   "Section01Description": "TwinkrunはスマートフォンとBluetooth Low Energyを使ったスポーツゲームです．Twinkrunを例として，スポーツゲームを作りたい人向けに実装の方針やiOSとAndroidで通信する際の注意点などを詳解していきます．最近App Storeにお布施を払えなくてお蔵入りになりました．",
   "Section01Title": "詳解 Twinkrun",
   "Section02Author": "@kkrnt",
-  "Section02Description": "Windowsにおけるユーザログインプロセスを紹介しつつ，あなただけの自由なログイン画面を作成するために必要なことを解説していきます．",
-  "Section02Title": "初めての WindowsUserLogin",
+  "Section02Description": "Windowsにおけるユーザログオンプロセスを紹介しつつ，あなただけの自由なログオン画面を作成するために必要なことを解説していきます．",
+  "Section02Title": "初めての WindowsUserLogon",
   "Section03Author": "@3846masa",
   "Section03Description": "Google Photosの内部APIについて書きます．公式でAPIが提供されていないGoogle Photosですが，Webインタフェースでは内部APIが使われています．これを活用すれば，Google Photosをより使い倒すことができるでしょう．",
   "Section03Title": "Google Photos Hacks",
