--- a/config.json
+++ b/config.json
@@ -55,8 +55,9 @@
   "Staff10Name": "",
   "Staff10Role": "",
   "Staff10URL": "",
-  "Store01Name": "",
-  "Store01URL": "",
+  "Store01Name": "BOOTH",
+  "Store01URL": "https://ocreilly.booth.pm/items/181677",
+  "Store01Image": "./imgs/BOOTH.png",
   "Store02Name": "",
   "Store02URL": "",
   "Store03Name": "",
