Fix authors and chapters

--- a/config.json
+++ b/config.json
@@ -37,7 +37,7 @@
   "Staff04Name": "@FMS_Cat",
   "Staff04Role": "フルスタックな猫",
   "Staff04URL": "https://twitter.com/FMS_Cat",
-  "Staff05Name": "And more...",
+  "Staff05Name": "",
   "Staff05Role": "",
   "Staff05URL": "",
   "Staff06Name": "",
@@ -78,7 +78,7 @@
   "Section04Description": "オシロスコープのX-Yモードを利用した，絵を描き方を解説します．単純な円やリサジュー曲線をはじめとして，文字や3DCGの描画についても解説をします．また，様々なグラフィックを描画するだけでなく，聴覚的な変化の付け方についても解説をします．",
   "Section04Title": "入門 オシロスコープ X-Yモード",
   "Section05Description": "",
-  "Section05Title": "And more...",
+  "Section05Title": "",
   "Section06Description": "",
   "Section06Title": "",
   "Section07Description": "",
