--- a/config.json
+++ b/config.json
@@ -55,9 +55,10 @@
   "Staff10Name": "",
   "Staff10Role": "",
   "Staff10URL": "",
-  "Store01Name": "BOOTH",
-  "Store01URL": "https://ocreilly.booth.pm/items/181677",
-  "Store01Image": "./imgs/BOOTH.png",
+  "StoreTBD": true,
+  "Store01Name": "",
+  "Store01URL": "",
+  "Store01Image": "",
   "Store02Name": "",
   "Store02URL": "",
   "Store03Name": "",
