--- a/config.json
+++ b/config.json
@@ -65,6 +65,9 @@
   "Store03URL": "",
   "Store04Name": "",
   "Store04URL": "",
+  "IsVisibleDLButton": true,
+  "DLURL": "./files/OCreilly_2015_Winter_Index.pdf",
+  "DLText": "目次サンプルはこちら",
   "Title": "詳説 お蔵入り",
   "Section01Author": "@kwzr",
   "Section01Description": "TwinkrunはスマートフォンとBluetooth Low Energyを使ったスポーツゲームです．Twinkrunを例として，スポーツゲームを作りたい人向けに実装の方針やiOSとAndroidで通信する際の注意点などを詳解していきます．最近App Storeにお布施を払えなくてお蔵入りになりました．",
