--- a/config.json
+++ b/config.json
@@ -56,10 +56,10 @@
   "Staff10Name": "",
   "Staff10Role": "",
   "Staff10URL": "",
-  "StoreTBD": true,
-  "Store01Name": "",
-  "Store01URL": "",
-  "Store01Image": "",
+  "StoreTBD": false,
+  "Store01Name": "BOOTH",
+  "Store01URL": "https://ocreilly.booth.pm/items/181677",
+  "Store01Image": "./imgs/BOOTH.png",
   "Store02Name": "",
   "Store02URL": "",
   "Store03Name": "",
