--- a/C89/config.json
+++ b/C89/config.json
@@ -2,7 +2,7 @@
   "Banner1": "",
   "Banner1Image": "",
   "Banner2": "",
-  "BlogURL": "https://ocreilly.meiji-ncc.tech/",
+  "BlogURL": "https://ocreilly.meiji-ncc.tech/C89/",
   "CircleName": "O'Creilly",
   "CircleURL": "",
   "CopyrightYears": "2015",
@@ -18,8 +18,8 @@
   "Hashtag": "C89",
   "Introduction": "本書『詳説 お蔵入り』は，\nブログなどに書きそびれて\n世に出せなかったノウハウを集めた書籍です．",
   "IntroductionHeading": "詳説 お蔵入り",
-  "JacketImage": "https://ocreilly.meiji-ncc.tech/imgs/book.png",
-  "MainImage": "https://ocreilly.meiji-ncc.tech/imgs/header.png",
+  "JacketImage": "https://ocreilly.meiji-ncc.tech/C89/imgs/book.png",
+  "MainImage": "https://ocreilly.meiji-ncc.tech/C89/imgs/header.png",
   "MetaDescription": "C89 3日目 東ム51b 「お蔵入り」してしまったソフトウェア開発技術Tipsの本を頒布します",
   "NicovideoEmbedCode": "",
   "Price": "500円",
