--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TechBookFest2016"]
 	path = TechBookFest2016
-	url = git@github.com:post-internet/OCreilly-TechBookFest-2016.git
+	url = https://github.com/post-internet/OCreilly-TechBookFest-2016.git
