--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,5 @@
+events:
+  - trigger
 build:
   main_build:
     image: node:6
@@ -11,12 +13,8 @@ build:
       - git config --global user.name $GIT_USERNAME
       - git config --global user.email $GIT_EMAIL
       - git commit -am '[ci skip] Update' || sh -c 'exit 0'
-    when:
-      event: []
 deploy:
   git_push:
     branch: gh-pages
     remote: https://github.com/post-internet/Ocreilly-Website.git
     force: false
-    when:
-      branch: gh-pages
