--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,7 @@ build:
       GIT_EMAIL: droneio@example.com
     commands:
       - cd $DRONE_DIR
+      - git pull
       - git submodule update --init --recursive
       - git submodule foreach git pull origin master
       - git config --global user.name $GIT_USERNAME
