--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ build:
       GIT_EMAIL: droneio@example.com
     commands:
       - cd $DRONE_DIR
-      - git pull
+      - git reset --hard HEAD@{1}
       - git submodule update --init --recursive
       - git submodule foreach git pull origin master
       - git config --global user.name $GIT_USERNAME
